--- a/MVC_coreMessages/Views/Message/SendMessage.cshtml
+++ b/MVC_coreMessages/Views/Message/SendMessage.cshtml
@@ -1,12 +1,55 @@
 ﻿@model MVC_coreMessages.Models.Message
 @{
     ViewData["Title"] = "SendMessage";
+
 }
 
 <h2>Send a message</h2>
 <h3>Enter your message below</h3>
-<form asp-controller="Message" asp-action="sendtheMessage" method="post" id="messageBody">
-    Message:  <input asp-for="MessageBody" /> <br />
-   <button id="sendMessageClick" type="submit" onclick="location.href='@Url.Action("sendtheMessage", "Message")?id=' + document.getElementById('messageBody').value">Send</button>
+<form>
+    <input type="text" id="messageBody"/>
+    <button id="sendMessage" >Send</button>
+    <button id="showMessages">Show</button>
+    <div id="messages">
+       </div>
 </form>
+
+
+<script src="https://code.jquery.com/jquery-1.10.2.js"></script>
+<script src="~/Scripts/jquery.unobtrusive-ajax.js"></script>
+<script type="text/jscript">
+
+    $("#showMessages").click(function (evt) {
+        evt.preventDefault();
+        evt.stopPropagation();
+        $.ajax({
+            type: "post",
+            url: "/Message/GetMessages",
+            success: function (response) {
+                //debugger
+                $("#messages").html(response);
+               
+            },
+            error: function (response) {
+                alert("Error " + response.responseText)
+            }
+        })
+    })
+    $('#sendMessage').click(
+        function (evt) {
+            evt.preventDefault();
+            debugger
+            var mes = $('#messageBody').val();
+            $.ajax({
+                type: "POST",
+                url: "/Message/send",
+                data: { message: mes } ,
+                cash:false,
+                dataType:JSON,  
+                success: function (response) { alert(response.responseText) },
+                failure: function (response) { alrt(response.responseText) },
+                error: function () { alert("Error") }
+            })
+        })
+</script>
 
